# duckle

./: .all-contributorsrc  CONTRIBUTING.md  Cargo.toml  Dockerfile.web  README.md  build.cmd  dev.cmd  dev.ps1
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  release.yml
apps/desktop/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/capabilities/: default.json
apps/desktop/icons/: icon.icns
apps/desktop/src/: engine_manager.rs  lib.rs  llama_chat.rs  main.rs  samples.rs  self_update.rs  update_check.rs
crates/connectors/src/: csv.rs
crates/duckdb-engine/: Cargo.toml
crates/duckdb-engine/examples/: oracle_repro.rs
crates/duckdb-engine/src/: connectors.rs  context.rs  drift.rs  history.rs  lib.rs  lineage.rs  plan.rs  tls.rs  util.rs
crates/duckdb-engine/src/plan/: builders.rs  graph.rs  mod.rs  specs.rs  tests.rs
crates/duckdb-engine/tests/: execution.rs
crates/duckle-lance/: Cargo.toml
crates/duckle-mcp/: catalog.json
crates/duckle-mcp/src/: tools.rs
crates/duckle-runner/: Cargo.toml
crates/duckle-runner/src/: drift.rs  main.rs  manifest.rs  panel.html  serve.rs
crates/metadata/src/: lib.rs
crates/plugin-sdk/src/: lib.rs
crates/scheduler/src/: lib.rs
docs/: roadmap.md  talend-ui-research.md
docs/02_workflows/: 00_workflow-design-principles.md  01_workflow-json-and-graph-shape.md  02_local-file-to-duckdb.md  03_api-ingestion-patterns.md  04_database-ingestion-patterns.md  05_quality-gates-and-deadletters.md  06_cdc-and-incremental-loads.md  07_dolt-bootstrap-and-sqlserver-patterns.md  08_dbt-modeling-patterns.md  09_ai-and-rag-workflows.md  10_orchestration-and-jobs.md  11_debugging-failed-workflows.md  12_migrating-v1-workflows.md
docs/current/: architecture.md  connectors.md  engines.md  getting-started.md  index.md  installation.md  scheduler.md  transforms.md
examples/starter-workspace/pipelines/: orders_filter.pipeline.json  region_summary.pipeline.json
frontend/: package-lock.json  package.json
frontend/scripts/: gen-brand-icons.mjs
frontend/src/: App.tsx  GuidedTour.tsx  UpdateBanner.tsx  errors.ts  font-size.ts  main.tsx  node-subtitle.ts  persistence.ts  pipeline-types.ts  repo-types.ts  run-resolve.ts  schema-resolve.ts  styles.css  tauri-bridge.ts  tauri-dialog.ts  validation.ts  workspace.ts
frontend/src/canvas/: Canvas.tsx  ConnectionTypePicker.tsx  DuckleEdge.tsx  QuickAddSearch.tsx  connection-types.ts  layout.ts
frontend/src/canvas/nodes/: DuckleNode.tsx
frontend/src/dives/: DiveModal.tsx  DivePanel.tsx  DivesGallery.tsx  VegaChart.tsx  dive-generate.ts  dive-types.ts  suggest-chart.ts
frontend/src/workflow-ui/: AccountMenu.tsx  BottomPanel.tsx  DuckleLogo.tsx  EditorHeader.tsx  EditorTabs.tsx  EngineSelector.tsx  EngineSetupModal.tsx  LeftSidebar.tsx  LineageModal.tsx  NewPipelineModal.tsx  Palette.tsx  ProjectTree.tsx  PropertiesPanel.tsx  RunParametersModal.tsx  ScheduleEditorModal.tsx  SettingsModal.tsx  WindowControls.tsx  WorkspacePickerModal.tsx  brand-icons.generated.ts  palette-data.ts
frontend/src/workflow-ui/editors/: ConnectionEditorModal.tsx  ContextEditorModal.tsx
frontend/src/workflow-ui/fields/: AggregationsField.tsx  ColumnField.tsx  ConnectionRefField.tsx  ExpressionField.tsx  FieldContext.ts  FieldRenderer.tsx  FilePathField.tsx  FilterBuilderField.tsx  KeyValueField.tsx  PrimitiveFields.tsx  RoutineRefField.tsx  component-manifests.ts  manifest-synth.ts  types.ts
marketing/promo/: .gitignore  build-v02.sh
scripts/: render_icon.py  seed-starter-workspace.sh
website/: CNAME  index.html  robots.txt  site.webmanifest  sitemap.xml  use-cases.html
website/assets/css/: site.css  site.v11.css  site.v9.css
website/assets/js/: site.js
website/docs/: ai-duckie.html  automation.html  components.html  getting-started.html  index.html  integrations.html  learn.html
